--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>01</title>
+        <title>Title Page</title>
         <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet" />
         <link rel="stylesheet" href="styles.css" />
     </head>
@@ -23,11 +23,11 @@
             </div>
         </nav>
 
-        <footer class="footer">
+        <footer class="footer container">
         <div class="footer__container">
             <div class="footer__top">
                 <div class="company__info">
-                    <h2 class="company__logo">Microsoft</h2>
+                    <h2 class="company__logo">Lorem Ipsum</h2>
                     <p class="company__description">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, iure. Harum, animi dolores,
                         nam, ad magni expedita.
@@ -49,11 +49,11 @@
                             </a>
                         </li>
                     </ul>
-                    <span class="copyright">&copy;2021 Company name. All rights reserved.</span>
+                    <span class="copyright">&copy;2022 Company name. All rights reserved.</span>
                 </div>
 
                 <div>
-                    <h6 class="footer__title">Microsoft Store</h6>
+                    <h6 class="footer__title">Store Address</h6>
                     <ul class="footer__list">
                         <li class="footer__list-item">
                             <a href="" class="footer__list-link">About</a>
@@ -71,7 +71,7 @@
                 </div>
 
                 <div>
-                    <h6 class="footer__title">Education</h6>
+                    <h6 class="footer__title">Information</h6>
                     <ul class="footer__list">
                         <li class="footer__list-item">
                             <a href="" class="footer__list-link">About</a>
@@ -89,7 +89,7 @@
                 </div>
 
                 <div>
-                    <h6 class="footer__title">Business</h6>
+                    <h6 class="footer__title">Contacts</h6>
                     <ul class="footer__list">
                         <li class="footer__list-item">
                             <a href="" class="footer__list-link">About</a>
