--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
                 </ul>
             </div>
         </nav>
-
+<div class="section-content conatiner">
+  <h1>Headline</h1>
+</div>
         <footer class="footer container">
         <div class="footer__container">
             <div class="footer__top">
