--- a/index.html
+++ b/index.html
@@ -1,114 +1,121 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Title Page</title>
-        <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet" />
-        <link rel="stylesheet" href="styles.css" />
-    </head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Title Page</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css"
+      rel="stylesheet"
+    />
+    <script href="script.js" /></script>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
 
-    <body>
-        <nav class="navbar container">
-            <a href="#" class="logo">LOGO</a>
-            <input type="checkbox" id="toggler" />
-            <label for="toggler"><i class="ri-menu-line"></i></label>
-            <div class="menu">
-                <ul class="list">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Contact</a></li>
-                </ul>
-            </div>
-        </nav>
-<div class="section-content conatiner">
-  <h1>Headline</h1>
-</div>
-        <footer class="footer container">
-        <div class="footer__container">
-            <div class="footer__top">
-                <div class="company__info">
-                    <h2 class="company__logo">Lorem Ipsum</h2>
-                    <p class="company__description">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, iure. Harum, animi dolores,
-                        nam, ad magni expedita.
-                    </p>
-                    <ul class="footer__list">
-                        <li class="footer__list-item">
-                            <a href="#" class="footer__list-link">
-                                <i class="ri-facebook-circle-line"></i>
-                            </a>
-                        </li>
-                        <li class="footer__list-item">
-                            <a href="#" class="footer__list-link">
-                                <i class="ri-instagram-line"></i>
-                            </a>
-                        </li>
-                        <li class="footer__list-item">
-                            <a href="#" class="footer__list-link">
-                                <i class="ri-twitter-line"></i>
-                            </a>
-                        </li>
-                    </ul>
-                    <span class="copyright">&copy;2022 Company name. All rights reserved.</span>
-                </div>
+  <body class="dark-mode">
+    <nav class="navbar container">
+      <a href="#" class="logo">LOGO</a>
+      <input type="checkbox" id="toggler" />
+      <label for="toggler"><i class="ri-menu-line"></i></label>
+      <div class="menu">
+        <ul class="list">
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Contact</a></li>
+   
+        </ul>
+      </div>
+    </nav>
+    <div class="section-content conatiner">
+      <h1>Headline</h1>
+    </div>
+    <footer class="footer container">
+      <div class="footer__container">
+        <div class="footer__top">
+          <div class="company__info">
+            <h2 class="company__logo">Lorem Ipsum</h2>
+            <p class="company__description">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere,
+              iure. Harum, animi dolores, nam, ad magni expedita.
+            </p>
+            <ul class="footer__list">
+              <li class="footer__list-item">
+                <a href="#" class="footer__list-link">
+                  <i class="ri-facebook-circle-line"></i>
+                </a>
+              </li>
+              <li class="footer__list-item">
+                <a href="#" class="footer__list-link">
+                  <i class="ri-instagram-line"></i>
+                </a>
+              </li>
+              <li class="footer__list-item">
+                <a href="#" class="footer__list-link">
+                  <i class="ri-twitter-line"></i>
+                </a>
+              </li>
+            </ul>
+            <span class="copyright"
+              >&copy;2022 Company name. All rights reserved.</span
+            >
+          </div>
 
-                <div>
-                    <h6 class="footer__title">Store Address</h6>
-                    <ul class="footer__list">
-                        <li class="footer__list-item">
-                            <a href="" class="footer__list-link">About</a>
-                        </li>
-                        <li class="footer__list-item">
-                            <a href="" class="footer__list-link">Careers</a>
-                        </li>
-                        <li class="footer__list-item">
-                            <a href="" class="footer__list-link">Affiliates</a>
-                        </li>
-                        <li class="footer__list-item">
-                            <a href="" class="footer__list-link">Sitemap</a>
-                        </li>
-                    </ul>
-                </div>
+          <div>
+            <h6 class="footer__title">Store Address</h6>
+            <ul class="footer__list">
+              <li class="footer__list-item">
+                <a href="" class="footer__list-link">About</a>
+              </li>
+              <li class="footer__list-item">
+                <a href="" class="footer__list-link">Careers</a>
+              </li>
+              <li class="footer__list-item">
+                <a href="" class="footer__list-link">Affiliates</a>
+              </li>
+              <li class="footer__list-item">
+                <a href="" class="footer__list-link">Sitemap</a>
+              </li>
+            </ul>
+          </div>
 
-                <div>
-                    <h6 class="footer__title">Information</h6>
-                    <ul class="footer__list">
-                        <li class="footer__list-item">
-                            <a href="" class="footer__list-link">About</a>
-                        </li>
-                        <li class="footer__list-item">
-                            <a href="" class="footer__list-link">Careers</a>
-                        </li>
-                        <li class="footer__list-item">
-                            <a href="" class="footer__list-link">Affiliates</a>
-                        </li>
-                        <li class="footer__list-item">
-                            <a href="" class="footer__list-link">Sitemap</a>
-                        </li>
-                    </ul>
-                </div>
+          <div>
+            <h6 class="footer__title">Information</h6>
+            <ul class="footer__list">
+              <li class="footer__list-item">
+                <a href="" class="footer__list-link">About</a>
+              </li>
+              <li class="footer__list-item">
+                <a href="" class="footer__list-link">Careers</a>
+              </li>
+              <li class="footer__list-item">
+                <a href="" class="footer__list-link">Affiliates</a>
+              </li>
+              <li class="footer__list-item">
+                <a href="" class="footer__list-link">Sitemap</a>
+              </li>
+            </ul>
+          </div>
 
-                <div>
-                    <h6 class="footer__title">Contacts</h6>
-                    <ul class="footer__list">
-                        <li class="footer__list-item">
-                            <a href="" class="footer__list-link">About</a>
-                        </li>
-                        <li class="footer__list-item">
-                            <a href="" class="footer__list-link">Careers</a>
-                        </li>
-                        <li class="footer__list-item">
-                            <a href="" class="footer__list-link">Affiliates</a>
-                        </li>
-                        <li class="footer__list-item">
-                            <a href="" class="footer__list-link">Sitemap</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
+          <div>
+            <h6 class="footer__title">Contacts</h6>
+            <ul class="footer__list">
+              <li class="footer__list-item">
+                <a href="" class="footer__list-link">About</a>
+              </li>
+              <li class="footer__list-item">
+                <a href="" class="footer__list-link">Careers</a>
+              </li>
+              <li class="footer__list-item">
+                <a href="" class="footer__list-link">Affiliates</a>
+              </li>
+              <li class="footer__list-item">
+                <a href="" class="footer__list-link">Sitemap</a>
+              </li>
+            </ul>
+          </div>
         </div>
+      </div>
     </footer>
-    </body>
+  </body>
 </html>
