--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
       href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css"
       rel="stylesheet"
     />
-    <script href="script.js" /></script>
+    
     <link rel="stylesheet" href="styles.css" />
   </head>
 
-  <body class="dark-mode">
+  <body>
     <nav class="navbar container">
       <a href="#" class="logo">LOGO</a>
       <input type="checkbox" id="toggler" />
